fix: Re-introduces repo contributor stats endpoint (#537)
